# protocalbuffer

CarPlateRec/: CMakeLists.txt
CarPlateRec/CarPlaleRec/: CarPlaleRec.conf  CarplateUtils.cpp  CarplateUtils.h  Precise_Detect.cpp  Precise_Detect.h  main_detect.cpp  main_detect.h  run.ini
CarPlateRec/CarPlaleRec/conf/: ReadConfig.cpp
CarPlateRec/CarPlaleRec/datacar/: cascade_6000_lbp.xml
CarPlateRec/CarPlaleRec/xml/: char_0207_v2.xml
CarPlateRec/CarPlaleRec/xmlcar/: mlp_blackback1215.xml
CarPlateRec/TCECarPlate/Interface/: TCECarPlate.cpp  TCECarPlate.h
CarPlateRec/testdll/: testdll.cpp
CarPlateRec/车牌/: CarPlaleRec.lib  Precise_Detect.h
CarPlateTest/: CarPlateTest.sln
CarPlateTest/CarPlateTest/: CarPlateTest.vcxproj  main_detect.cpp  radon2.cpp  radon2.h  run.ini
Illegal Parking/: CAdo.cpp  ClientSocketThread.h  CvvImage.h  Foreground_Model.cpp  GeneralDefa.h  HKDlg.opt  HKDlg.sln  HKDlg.vcxproj.filters  HKDlgDlg.cpp  IllegalInfo.sql  Lock.h  LogFile.cpp  MiniDump.cpp  MisParking.cpp  MyButton.cpp  PicInfo.cpp  PicInfo.h  StdAfx.h  Thread.h  control.cpp  exception_handler.h  hashmap.h  log.cpp  main - 改进倾斜矫正0205ori_0427_recheck.cpp  radon2.cpp  rgbmodeling.h  tceudp.cpp  vibe.cpp  vibe.h
Illegal Parking/CAR/: Precise_Detect.h  Precise_Detect_Day.cpp  main - 改进倾斜矫正0205ori_0427_recheck.cpp  radon2.cpp  run.ini
Illegal Parking/CAR/xmlcar/: 10000_digit_192.xml
Illegal Parking/data/: PlayRecord.txt  cascade_haar_4300_11_0.45.xml  cascade_haar_4300_15_0.45.xml  mlp_color0115.xml  mlp_yellowback1215.xml  mlpchar_9070_0116.xml
Illegal Parking/datacar/: cascade_final_14.xml
Illegal Parking/xml/: cascade1.xml  cascade2.xml
Illegal Parking/xmlcar/: mlp_whiteback1215.xml
trunk/CarPlateRec/CarPlaleRec/: CMakeLists.txt  Precise_Detect_Day.cpp  ReadMe.txt  radon2.cpp
trunk/CarPlateRec/CarPlaleRec/conf/: ReadConfig.h
trunk/CarPlateRec/CarPlaleRec/xmlcar/: mlpchar_white_head.xml
trunk/CarPlateRec/TCECarPlate/: CMakeLists.txt
trunk/CarPlateRec/TCECarPlate/Framework/: CarPlateMain.cpp  CarPlateMain.h
trunk/CarPlateRec/TCECarPlate/Interface/: CarPlateCommon.h
trunk/CarPlateRec/testdll/: CMakeLists.txt  run.ini  wrong list.csv  多车牌识别(test0127_17Xdis).csv
trunk/CarPlateRec/testdll/data/: cascade_new.xml
trunk/CarPlateRec/testdll/xml/: 0D_dis_364_2258.xml
trunk/CarPlateTest/CarPlateTest/: CarPlateTest.vcxproj.filters  Precise_Detect.h  Precise_Detect_Day.cpp  main - 改进倾斜矫正0205ori_0427_recheck.cpp
trunk/CarPlateTest/CarPlateTest/xml/: 25000_192_alpha.xml
trunk/Illegal Parking/: CAdo.h  Car_16.xml  Car_32.xml  ClientSocketThread.cpp  CvvImage.cpp  DlgPTZCruise.cpp  DlgPTZCruise.h  Foreground_Model.h  GeneralDef.h  HCNetSDK.h  HKDlg.cpp  HKDlg.h  HKDlg.plg  HKDlg.rc  HKDlg.vcxproj  HKDlgDlg.h  HKSDK.props  Lock.cpp  LogFile.h  MiniDump.h  MyButton.h  Precise_Detect.h  Precise_Detect_Day.cpp  RABDetection.cpp  RABDetection.h  RGB.h  ReadMe.txt  StdAfx.cpp  TCE.ini  blockNode.h  control.h  hashmap.cpp  log.h  main_detect.cpp  park.h  resource.h  run.ini  tceudp.h
trunk/Illegal Parking/CAR/: main_detect.cpp  main_detect.h
trunk/Illegal Parking/data/: 34000_192.xml  cascade_001.xml  cascade_car.xml  cascade_haar_2000_20_0.5.xml  cascade_lbp_4300.xml
trunk/Illegal Parking/datacar/: cascade_double.xml
trunk/Illegal Parking/incCn/: HCNetSDK0.h
trunk/Illegal Parking/xml/: cascade4.xml
